test the options that worked one time